[package]
name = "xias"
version = "0.3.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/xias"
homepage = "https://github.com/SOF3/xias"
readme = "README.md"
description = "Explicit numeric type conversions"

[dev-dependencies]
paste = "1.0.6"
